# Commander

./: .gitignore  CMakeLists.txt  Commander.qmlproject
app/: CMakeLists.txt  ImageTestingPage.qml  TestImage.qml  main.cpp  main.qml  qtquickcontrols2.conf
app/android/: AndroidManifest.xml
examples/: CMakeLists.txt  TestConfig.cmake  qmldir
src/: CMakeLists.txt  CommanderAndroidSupport.cmake  CommanderCMakeSupport.cmake  CommanderConfig.cmake.in  CommanderConfigVersion.cmake.in  CommanderDefaultSupport.cmake  CommanderInternals.cmake  CommanderMacros.cmake  CommanderTargetsMacros.cmake  CommanderUtilsMacros.cmake
src/core/: CMakeLists.txt  application.cpp  application.h  application_p.h  config.h  config.h.in  global.h
src/imports/: CMakeLists.txt
src/imports/Commander/: CMakeLists.txt  TestApp.qml  commanderhelper.cpp  commanderhelper.h  commanderplugin.cpp  commanderplugin.h  commanderurlinterceptor.cpp  commanderurlinterceptor.h
src/imports/Commander/api/: Api.qml  CMakeLists.txt
src/imports/Commander/core/: App.qml  AppButton.qml  AppCard.qml  AppDrawer.qml  AppDrawerHeader.qml  AppPage.qml  AppToolBar.qml  CMakeLists.txt  Navigation.qml  NavigationBar.qml  NavigationDrawer.qml  NavigationStack.qml  NavigationTab.qml
src/imports/Commander/image/: AppIcon.qml  AppImage.qml  AppRemoteImage.qml  CMakeLists.txt  imageprovider.cpp  imageprovider.h  imageresponse.cpp  imageresponse.h
src/imports/Commander/model/: CMakeLists.txt
src/imports/Commander/network/: CMakeLists.txt  networkmanager.cpp  networkmanager.h
src/imports/Commander/text/: AppLabel.qml  CMakeLists.txt  SearchBar.qml
src/imports/Commander/view/: AppGridDelegate.qml  AppGridView.qml  CMakeLists.txt
